# kod

./: .gitignore  CMakeLists.txt  README.md  build-lib.bat  build-lib.sh  clean.bat  clean.sh  test.bat  test.sh
.github/workflows/: ci.yml
src/: main.c
tests/: test_dummy.py
